template message bug fixed
